@@ -576,7 +576,8 @@ public class StrucmotifUpdate implements CommandLineRunner {
             try (Stream<Path> paths = Files.walk(Paths.get(ids[offset]))) {
                 requested = paths.filter(path -> STRUCTURE_EXTENSIONS.stream().anyMatch(ext -> path.toFile().getName().toLowerCase().endsWith(ext)))
                         .map(this::mapFile)
-                        .toList();
+                        // can't be toList() as shuffle will happen downstream
+                        .collect(Collectors.toList());
             }
         } else {
             requested = Arrays.stream(ids)
@@ -597,7 +598,8 @@ public class StrucmotifUpdate implements CommandLineRunner {
                             throw new IllegalArgumentException("Cannot parse line: '" + id + "' - format is '${4-digit-entryId}' or '${identifier},${url}'");
                         }
                     })
-                    .toList();
+                    // can't be toList() as shuffle will happen downstream
+                    .collect(Collectors.toList());
         }
         Collections.shuffle(requested);
 
